syntax= "proto3";

package proto.v1.customer;

option go_package = "./";

service CustomerService {
    rpc CreateCustomer (CustomerRequest) returns (CustomerResponse);
    rpc UpdateVerifiedCustomer (UpdateVerifiedCustomerRequest) returns (UpdateVerifiedCustomerResponse);
    rpc GetCustomerIDByEmail (GetCustomerIDByEmailRequest) returns (GetCustomerIDByEmailResponse);
    rpc GetCustomerDetailsByEmail (GetCustomerDetailsByEmailRequest) returns (GetCustomerDetailsByEmailResponse);
    rpc UpdateCustomerPasswordByEmail(UpdateCustomerPasswordByEmailRequest) returns (UpdateCustomerPasswordByEmailResponse);
}

message CustomerRequest {
    string full_name = 1;
    string email = 2;
    string phone_number = 3;
    string password = 4;
    string pin = 5;
}

message CustomerResponse {
    uint64 id = 1;
    bool is_verified = 2;
}

message UpdateVerifiedCustomerRequest {
    string email = 1;
}

message UpdateVerifiedCustomerResponse {
    bool is_verified = 1;
}

message GetCustomerIDByEmailRequest {
    string email = 1;
}

message GetCustomerIDByEmailResponse {
    uint64 customer_id = 1;
}

message GetCustomerDetailsByEmailRequest {
    string email=1;
}

message GetCustomerDetailsByEmailResponse {
    uint64 id = 1;
    string full_name = 2;
    string email = 3;
    string phone_number = 4;
    string password = 5;
    string pin = 6;
}

message UpdateCustomerPasswordByEmailRequest {
    string email = 1;
    string password = 2;
}

message UpdateCustomerPasswordByEmailResponse {
    string email = 1;
}