syntax= "proto3";

package proto.v1.wallet;

option go_package = "./";

service WalletService {
    rpc CreateWallet (WalletRequest) returns (WalletResponse);
    rpc GetCustomerWallet (GetCustomerWalletRequest) returns (GetCustomerWalletResponse);
}

message WalletRequest {
    uint64 customer_id = 1;
}

message WalletResponse {
    uint64 id = 1;
}

message GetCustomerWalletRequest {
    uint64 customer_id = 1;
}

message GetCustomerWalletResponse {
    uint64 id = 1;
    int64 balance = 2;
}